[master] server side for custom connections (not tested)
