# internal/api/server/artel_api/external_connections_grpc.pb.go
@@ -1,0 +1,198 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             v5.28.3
+// source: external_connections.proto
+
+package artel_api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ExternalConnectionsAPI_InitiateGoogleOAuth_FullMethodName = "/artel_api.ExternalConnectionsAPI/InitiateGoogleOAuth"
+	ExternalConnectionsAPI_ListConnections_FullMethodName     = "/artel_api.ExternalConnectionsAPI/ListConnections"
+	ExternalConnectionsAPI_DisconnectProvider_FullMethodName  = "/artel_api.ExternalConnectionsAPI/DisconnectProvider"
+)
+
+// ExternalConnectionsAPIClient is the client API for ExternalConnectionsAPI service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ExternalConnectionsAPIClient interface {
+	InitiateGoogleOAuth(ctx context.Context, in *InitiateGoogleOAuth_Request, opts ...grpc.CallOption) (*InitiateGoogleOAuth_Response, error)
+	ListConnections(ctx context.Context, in *ListConnections_Request, opts ...grpc.CallOption) (*ListConnections_Response, error)
+	DisconnectProvider(ctx context.Context, in *DisconnectProvider_Request, opts ...grpc.CallOption) (*DisconnectProvider_Response, error)
+}
+
+type externalConnectionsAPIClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewExternalConnectionsAPIClient(cc grpc.ClientConnInterface) ExternalConnectionsAPIClient {
+	return &externalConnectionsAPIClient{cc}
+}
+
+func (c *externalConnectionsAPIClient) InitiateGoogleOAuth(ctx context.Context, in *InitiateGoogleOAuth_Request, opts ...grpc.CallOption) (*InitiateGoogleOAuth_Response, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(InitiateGoogleOAuth_Response)
+	err := c.cc.Invoke(ctx, ExternalConnectionsAPI_InitiateGoogleOAuth_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *externalConnectionsAPIClient) ListConnections(ctx context.Context, in *ListConnections_Request, opts ...grpc.CallOption) (*ListConnections_Response, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListConnections_Response)
+	err := c.cc.Invoke(ctx, ExternalConnectionsAPI_ListConnections_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *externalConnectionsAPIClient) DisconnectProvider(ctx context.Context, in *DisconnectProvider_Request, opts ...grpc.CallOption) (*DisconnectProvider_Response, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DisconnectProvider_Response)
+	err := c.cc.Invoke(ctx, ExternalConnectionsAPI_DisconnectProvider_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ExternalConnectionsAPIServer is the server API for ExternalConnectionsAPI service.
+// All implementations must embed UnimplementedExternalConnectionsAPIServer
+// for forward compatibility.
+type ExternalConnectionsAPIServer interface {
+	InitiateGoogleOAuth(context.Context, *InitiateGoogleOAuth_Request) (*InitiateGoogleOAuth_Response, error)
+	ListConnections(context.Context, *ListConnections_Request) (*ListConnections_Response, error)
+	DisconnectProvider(context.Context, *DisconnectProvider_Request) (*DisconnectProvider_Response, error)
+	mustEmbedUnimplementedExternalConnectionsAPIServer()
+}
+
+// UnimplementedExternalConnectionsAPIServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedExternalConnectionsAPIServer struct{}
+
+func (UnimplementedExternalConnectionsAPIServer) InitiateGoogleOAuth(context.Context, *InitiateGoogleOAuth_Request) (*InitiateGoogleOAuth_Response, error) {
+	return nil, status.Error(codes.Unimplemented, "method InitiateGoogleOAuth not implemented")
+}
+func (UnimplementedExternalConnectionsAPIServer) ListConnections(context.Context, *ListConnections_Request) (*ListConnections_Response, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListConnections not implemented")
+}
+func (UnimplementedExternalConnectionsAPIServer) DisconnectProvider(context.Context, *DisconnectProvider_Request) (*DisconnectProvider_Response, error) {
+	return nil, status.Error(codes.Unimplemented, "method DisconnectProvider not implemented")
+}
+func (UnimplementedExternalConnectionsAPIServer) mustEmbedUnimplementedExternalConnectionsAPIServer() {
+}
+func (UnimplementedExternalConnectionsAPIServer) testEmbeddedByValue() {}
+
+// UnsafeExternalConnectionsAPIServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ExternalConnectionsAPIServer will
+// result in compilation errors.
+type UnsafeExternalConnectionsAPIServer interface {
+	mustEmbedUnimplementedExternalConnectionsAPIServer()
+}
+
+func RegisterExternalConnectionsAPIServer(s grpc.ServiceRegistrar, srv ExternalConnectionsAPIServer) {
+	// If the following call panics, it indicates UnimplementedExternalConnectionsAPIServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ExternalConnectionsAPI_ServiceDesc, srv)
+}
+
+func _ExternalConnectionsAPI_InitiateGoogleOAuth_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(InitiateGoogleOAuth_Request)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExternalConnectionsAPIServer).InitiateGoogleOAuth(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExternalConnectionsAPI_InitiateGoogleOAuth_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExternalConnectionsAPIServer).InitiateGoogleOAuth(ctx, req.(*InitiateGoogleOAuth_Request))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ExternalConnectionsAPI_ListConnections_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListConnections_Request)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExternalConnectionsAPIServer).ListConnections(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExternalConnectionsAPI_ListConnections_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExternalConnectionsAPIServer).ListConnections(ctx, req.(*ListConnections_Request))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ExternalConnectionsAPI_DisconnectProvider_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DisconnectProvider_Request)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExternalConnectionsAPIServer).DisconnectProvider(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExternalConnectionsAPI_DisconnectProvider_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExternalConnectionsAPIServer).DisconnectProvider(ctx, req.(*DisconnectProvider_Request))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ExternalConnectionsAPI_ServiceDesc is the grpc.ServiceDesc for ExternalConnectionsAPI service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ExternalConnectionsAPI_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "artel_api.ExternalConnectionsAPI",
+	HandlerType: (*ExternalConnectionsAPIServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "InitiateGoogleOAuth",
+			Handler:    _ExternalConnectionsAPI_InitiateGoogleOAuth_Handler,
+		},
+		{
+			MethodName: "ListConnections",
+			Handler:    _ExternalConnectionsAPI_ListConnections_Handler,
+		},
+		{
+			MethodName: "DisconnectProvider",
+			Handler:    _ExternalConnectionsAPI_DisconnectProvider_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "external_connections.proto",
+}
